Fix: text alignment& small changes of style

--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ p {
     justify-content: space-between;
 }
 
+
 /* 
 ****************************************
 TOP NAVIGATION BAR
@@ -178,6 +179,10 @@ SECTION 4
 */
 .card{
     width: 100%; 
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
 }
 
 /* 
